--- a/.github/workflows/autodocgen.yml
+++ b/.github/workflows/autodocgen.yml
@@ -40,4 +40,5 @@ jobs:
         git config --global user.email "actions@github.com"
         git add -A
         git diff --cached --quiet || git commit -m "🔄 Auto-generated documentation"
+        git pull --rebase origin ${{ github.ref_name }}
         git push
